--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ li>a:hover {
   box-shadow: 0 6px 10px rgba(0, 0, 0, .08), 0 0 6px rgba(0, 0, 0, .05);
   transition: .3s transform cubic-bezier(.155, 1.105, .295, 1.12), .3s box-shadow, .3s -webkit-transform cubic-bezier(.155, 1.105, .295, 1.12);
   cursor: default;
+  height: 323px;
 }
 
 #btn-back-to-top {
